# figue

./: Cargo.toml  README.md  README.md.in  update-snapshots.ps1
.config/: dodeca.styx
.github/workflows/: website.yml
crates/facet-format/: Cargo.toml
crates/facet-format/src/: event.rs  solver.rs
crates/facet-format/src/deserializer/: eenum.rs  entry.rs  mod.rs
crates/figue/: CHANGELOG.md  Cargo.toml
crates/figue-attrs/: CHANGELOG.md  Cargo.toml  README.md.in
crates/figue-attrs/src/: lib.rs
crates/figue/examples/: kitchen_sink.json  kitchen_sink.jsonc  teamy_fork_behaviour.rs
crates/figue/src/: arbitrary_checks.rs  builder.rs  completions.rs  config_value_parser.rs  driver.rs  dump.rs  extract.rs  help.rs  lib.rs  missing.rs  reflection.rs  schema.rs  suggest.rs  to_args.rs  value_builder.rs
crates/figue/src/layers/: cli.rs  env.rs  file.rs
crates/figue/src/schema/: from_schema.rs  tests.rs
crates/figue/src/schema/snapshots/: figue__schema__tests__snapshot_schema_bad_config_field.snap  figue__schema__tests__snapshot_schema_conflicting_long_flags.snap  figue__schema__tests__snapshot_schema_conflicting_short_flags.snap  figue__schema__tests__snapshot_schema_counted_on_non_integer.snap  figue__schema__tests__snapshot_schema_env_prefix_without_config.snap  figue__schema__tests__snapshot_schema_missing_args_annotation.snap  (+4 more)
crates/figue/tests/integration/: help.rs  mod.rs  optional_value.rs  sequence.rs  simple.rs  subcommand.rs  subcommand_errors.rs  to_args.rs  unknown_keys.rs
docs/: .gitignore
docs/content/: _index.md
docs/content/guide/: _index.md  cli-arguments.md  config-files.md  defaults-and-optionals.md  env-substitution.md  environment-variables.md  errors-and-diagnostics.md  fork-differences.md  getting-started.md  help-and-completions.md  json-schema.md  layered-configuration.md  requirements-extraction.md  subcommands.md
docs/content/recipes/: _index.md  deploy-cli.md  git-like-multitool.md  testing.md  twelve-factor-service.md
docs/content/reference/: _index.md  attributes.md  builder-api.md  cli-grammar.md  config-file-formats.md  entry-points.md  environment-variables.md  errors.md  json-schema.md  merge-precedence.md  supported-types.md
docs/data/: versions.kdl
docs/meta/: highlight.html
docs/sass/: main.scss
docs/static/: CNAME
docs/templates/: base.html  page.html  section.html
(+16 files in other folders)
