[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "2.0.2"
edition = "2024"
rust-version = "1.90.0"
authors = ["Amos Wenger <amos@bearcove.eu>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/figue"
homepage = "https://github.com/bearcove/figue"
keywords = ["cli", "args", "parser", "facet", "command-line"]
categories = ["command-line-interface"]

[workspace.dependencies]
figue-attrs = { path = "crates/figue-attrs", version = "2.0.2" }

# Facet ecosystem
facet = { version = "0.46", features = ["indexmap", "camino", "net"] }
facet-core = { version = "0.46" }
facet-format = { version = "0.47" }
facet-json = { version = "0.46" }
facet-reflect = { version = "0.46" }
facet-pretty = { version = "0.46" }
facet-error = { version = "0.46" }
facet-solver = { version = "0.46" }
facet-testhelpers = { version = "0.46" }

# External dependencies
camino = "1.1"
heck = "0.5.0"
indexmap = "2"
owo-colors = "4"
tracing = "0.1"
ariadne = "0.6"
unicode-width = "0.2.2"
strip-ansi-escapes = "0.2.1"
strsim = "0.11"
insta = "1"
supports-color = "3"
tempfile = "3"

# Uncomment for local development with facet
# [patch."https://github.com/facet-rs/facet"]
# facet = { path = "../facet/facet" }
# facet-core = { path = "../facet/facet-core" }
# facet-format = { path = "../facet/facet-format" }
# facet-json = { path = "../facet/facet-json" }
# facet-reflect = { path = "../facet/facet-reflect" }
# facet-pretty = { path = "../facet/facet-pretty" }
# facet-error = { path = "../facet/facet-error" }
# facet-solver = { path = "../facet/facet-solver" }
# facet-testhelpers = { path = "../facet/facet-testhelpers" }
