[package]
name = "teamy-figue-attrs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Attribute macros for teamy-figue CLI argument parsing"
documentation = "https://docs.rs/teamy-figue-attrs"
readme = "README.md"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet.workspace = true
